--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
             <a class="navbar-brand d-flex flex-column" href="#">
-                <img src="gymimg-4.png" alt="" width="30" height="24">
+                <img src="gymicon.png" alt="" width="30" height="24">
                 <h4>Harry Fitness</h4>
             </a>
 
